# socks5-proxy

./: .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  build.rs  socks5.conf
.cargo/: config  config.toml
cli/: Cargo.toml  build.rs
cli/src/: main.rs
socks5/: Cargo.toml
socks5/src/: config.rs  lib.rs  server.rs
src/: main.rs
