[package]
name = "socks5"
description = "A lightweight and fast socks5 server"
version = "0.2.5"
authors = ["Lipeng WANG <wang.lp@outlook.com>"]
edition = "2018"
license= "MIT"
readme = "README.md"
repository = "https://github.com/WANG-lp/socks5-rs"
keywords = ["socks5", "proxy", "async"]

[features]

[dependencies]
futures = "0.3"
async-std = "1"
bytes = "0.6"
lazy_static = "1.4.0"
chrono = "0.4"
log = "0.4"
env_logger = "0.8"
cidr-utils = "0.5"
ipnetwork = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
trust-dns-resolver = "0.19"